GIS-CLAIMS: Change in the claim transactions UI

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1166,6 +1166,52 @@
         "edit_peril": "编辑风险", 
         "confirm_delete_peril": "您确定要删除此风险吗？", 
         "enter_peril": "输入风险"
+      },
+      "claim_transaction": {
+        "claim_transaction_details": "索赔交易详情",
+        "claim_number": "索赔编号",
+        "product": "产品",
+        "risk_wef": "风险WEF",
+        "loss_description": "损失描述",
+        "claim_status": "索赔状态",
+        "catastrophe": "灾难",
+        "policy_number": "保单号",
+        "insured": "投保人",
+        "risk_wet": "风险WET",
+        "booked_by": "预订人",
+        "next_review_date": "下次审查日期",
+        "event": "事件",
+        "endorsement_number": "批注号",
+        "risk": "风险",
+        "claim_loss_date": "索赔损失日期",
+        "booked_date": "预订日期",
+        "agent_intermediary": "代理/中介",
+        "priority_level": "优先级",
+        "client": "客户",
+        "risk_value": "风险价值",
+        "claim_notification_date": "索赔通知日期",
+        "admit_liability": "承认责任",
+        "insured_policy_no": "投保人保单号",
+        "currency": "货币"
+      },
+      "claim_transaction_report": {
+        "claim_transaction_report": "索赔交易报告",
+        "claim_revisions": "索赔修订",
+        "claim_payments": "索赔支付",
+        "letters_and_memos": "信函和备忘录",
+        "policy_enquiry": "保单查询",
+        "back_to_claim_enquiry": "返回索赔查询",
+        "trans_type": "交易类型",
+        "trans_date": "交易日期",
+        "gross_liability": "总责任",
+        "net_liability_payee": "净责任收款人",
+        "paid_amount": "已付金额",
+        "authorised_by": "授权人",
+        "authorise_date": "授权日期",
+        "cheque_number": "支票号码",
+        "cheque_date": "支票日期",
+        "receipt_number": "收据号码",
+        "action": "操作"
       }
   }
 },
