--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1167,6 +1167,52 @@
     "edit_peril": "Bewerk Gevaar", 
     "confirm_delete_peril": "Weet u zeker dat u dit gevaar wilt verwijderen?",
     "enter_peril": "Voer Gevaar in"
+  },
+  "claim_transaction": {
+    "claim_transaction_details": "Details der Anspruchsabwicklung",
+    "claim_number": "Anspruchsnummer",
+    "product": "Produkt",
+    "risk_wef": "Risiko WEF",
+    "loss_description": "Schadensbeschreibung",
+    "claim_status": "Anspruchsstatus",
+    "catastrophe": "Katastrophe",
+    "policy_number": "Police-Nummer",
+    "insured": "Versicherter",
+    "risk_wet": "Risiko WET",
+    "booked_by": "Gebucht von",
+    "next_review_date": "Nächster Überprüfungstermin",
+    "event": "Ereignis",
+    "endorsement_number": "Vermerksnummer",
+    "risk": "Risiko",
+    "claim_loss_date": "Datum des Anspruchsverlusts",
+    "booked_date": "Buchungsdatum",
+    "agent_intermediary": "Agent/Vermittler",
+    "priority_level": "Prioritätsstufe",
+    "client": "Klient",
+    "risk_value": "Risikowert",
+    "claim_notification_date": "Datum der Anspruchsbenachrichtigung",
+    "admit_liability": "Haftung übernehmen",
+    "insured_policy_no": "Versicherte Police-Nr.",
+    "currency": "Währung"
+  },
+  "claim_transaction_report": {
+    "claim_transaction_report": "Anspruchsabwicklungsbericht",
+    "claim_revisions": "Anspruchsrevisionen",
+    "claim_payments": "Anspruchszahlungen",
+    "letters_and_memos": "Briefe und Memos",
+    "policy_enquiry": "Police-Anfrage",
+    "back_to_claim_enquiry": "Zurück zur Anspruchsabfrage",
+    "trans_type": "Transaktionsart",
+    "trans_date": "Transaktionsdatum",
+    "gross_liability": "Bruttohaftung",
+    "net_liability_payee": "Nettohaftungsempfänger",
+    "paid_amount": "Gezahlter Betrag",
+    "authorised_by": "Autorisiert von",
+    "authorise_date": "Autorisierungsdatum",
+    "cheque_number": "Schecknummer",
+    "cheque_date": "Scheckdatum",
+    "receipt_number": "Empfangsnummer",
+    "action": "Aktion"
   }
 }
   },
