--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -1113,64 +1113,111 @@
    "commission": "Kamisheni"
     },
     "claims": {
-      "opening": {
-        "claim_opening": "Ufunguzi wa Madai",
-        "product": "Bidhaa",
-        "select_product": "Chagua Bidhaa",
-        "policy": "Sera",
-        "select_policy": "Chagua Sera",
-        "loss_date": "Tarehe ya Hasara",
-        "select_date": "Chagua Tarehe",
-        "loss_time": "Wakati wa Hasara",
-        "select_time": "Chagua Wakati",
-        "risk": "Hatari",
-        "select_risk": "Chagua Hatari",
-        "notification_date": "Tarehe ya Arifa",
-        "causation": "Sababu",
-        "select_causation": "Chagua Sababu",
-        "catastrophe_event": "Janga/Tukio",
-        "select_catastrophe_event": "Chagua Janga/Tukio",
-        "claim_description": "Maelezo ya Dai",
-        "enter_claim_description": "Ingiza Maelezo ya Dai",
-        "party_to_blame": "Mhusika Aliye na Hatia",
-        "select_party_to_blame": "Chagua Mhusika Aliye na Hatia",
-        "average_basic_salary": "Mshahara wa Msingi wa wastani",
-        "enter_average_basic_salary": "Ingiza Mshahara wa Msingi wa wastani",
-        "average_earnings": "Mapato ya Wastani",
-        "enter_average_earnings": "Ingiza Mapato ya Wastani",
-        "off_duty_date_from": "Tarehe ya Kupumzika Kutoka",
-        "off_duty_date_to": "Tarehe ya Kupumzika Hadi",
-        "liability_admission": "Kukubali Dhamana",
-        "next_review_date": "Tarehe ya Ukaguzi Ujao",
-        "next_review_user": "Mtumiaji wa Ukaguzi Ujao",
-        "select_next_review_user": "Chagua Mtumiaji wa Ukaguzi Ujao",
-        "priority_level": "Kipaumbele",
-        "select_priority_level": "Chagua Kipaumbele",
-        "reference_number": "Nambari ya Rejea",
-        "enter_reference_number": "Ingiza Nambari ya Rejea",
-        "accident_location": "Mahali pa Ajali",
-        "enter_accident_location": "Ingiza Mahali pa Ajali",
-        "add_peril": "Ongeza Hatari",
-        "peril": "Hatari",
-        "claim_estimate": "Makadirio ya Dai",
-        "actions": "Vitendo",
-        "edit": "Hariri",
-        "delete": "Futa",
-        "capture_claim": "Rekodi Dai",
-        "insured_as_claimant": "Asilimi kama Mdai",
-        "claimant": "Mdai",
-        "create_claimant": "Unda Mdai",
-        "peril_details": "Maelezo ya Hatari",
-        "select_peril": "Chagua Hatari",
-        "enter_claim_estimate": "Ingiza Kadirio la Dai", 
-        "cancel": "Ghairi",
-        "save": "Hifadhi",
-        "edit_peril": "Hariri Hatari",
-        "confirm_delete_peril": "Je, una uhakika unataka kufuta hatari hii?",
-        "enter_peril": "Ingiza Hatari" 
+    "opening": {
+      "claim_opening": "Ufunguzi wa Madai",
+      "product": "Bidhaa",
+      "select_product": "Chagua Bidhaa",
+      "policy": "Sera",
+      "select_policy": "Chagua Sera",
+      "loss_date": "Tarehe ya Hasara",
+      "select_date": "Chagua Tarehe",
+      "loss_time": "Wakati wa Hasara",
+      "select_time": "Chagua Wakati",
+      "risk": "Hatari",
+      "select_risk": "Chagua Hatari",
+      "notification_date": "Tarehe ya Arifa",
+      "causation": "Sababu",
+      "select_causation": "Chagua Sababu",
+      "catastrophe_event": "Janga/Tukio",
+      "select_catastrophe_event": "Chagua Janga/Tukio",
+      "claim_description": "Maelezo ya Dai",
+      "enter_claim_description": "Ingiza Maelezo ya Dai",
+      "party_to_blame": "Mhusika Aliye na Hatia",
+      "select_party_to_blame": "Chagua Mhusika Aliye na Hatia",
+      "average_basic_salary": "Mshahara wa Msingi wa wastani",
+      "enter_average_basic_salary": "Ingiza Mshahara wa Msingi wa wastani",
+      "average_earnings": "Mapato ya Wastani",
+      "enter_average_earnings": "Ingiza Mapato ya Wastani",
+      "off_duty_date_from": "Tarehe ya Kupumzika Kutoka",
+      "off_duty_date_to": "Tarehe ya Kupumzika Hadi",
+      "liability_admission": "Kukubali Dhamana",
+      "next_review_date": "Tarehe ya Ukaguzi Ujao",
+      "next_review_user": "Mtumiaji wa Ukaguzi Ujao",
+      "select_next_review_user": "Chagua Mtumiaji wa Ukaguzi Ujao",
+      "priority_level": "Kipaumbele",
+      "select_priority_level": "Chagua Kipaumbele",
+      "reference_number": "Nambari ya Rejea",
+      "enter_reference_number": "Ingiza Nambari ya Rejea",
+      "accident_location": "Mahali pa Ajali",
+      "enter_accident_location": "Ingiza Mahali pa Ajali",
+      "add_peril": "Ongeza Hatari",
+      "peril": "Hatari",
+      "claim_estimate": "Makadirio ya Dai",
+      "actions": "Vitendo",
+      "edit": "Hariri",
+      "delete": "Futa",
+      "capture_claim": "Rekodi Dai",
+      "insured_as_claimant": "Asilimi kama Mdai",
+      "claimant": "Mdai",
+      "create_claimant": "Unda Mdai",
+      "peril_details": "Maelezo ya Hatari",
+      "select_peril": "Chagua Hatari",
+      "enter_claim_estimate": "Ingiza Kadirio la Dai", 
+      "cancel": "Ghairi",
+      "save": "Hifadhi",
+      "edit_peril": "Hariri Hatari",
+      "confirm_delete_peril": "Je, una uhakika unataka kufuta hatari hii?",
+      "enter_peril": "Ingiza Hatari" 
+    },
+    "claim_transaction": {
+      "claim_transaction_details": "Maelezo ya shughuli ya madai",
+      "claim_number": "Nambari ya dai",
+      "product": "Bidhaa",
+      "risk_wef": "Hatari WEF",
+      "loss_description": "Maelezo ya hasara",
+      "claim_status": "Hali ya dai",
+      "catastrophe": "Janga",
+      "policy_number": "Nambari ya sera",
+      "insured": "Mwenye bima",
+      "risk_wet": "Hatari WET",
+      "booked_by": "Alibuniwa na",
+      "next_review_date": "Tarehe ya ukaguzi unaofuata",
+      "event": "Tukio",
+      "endorsement_number": "Nambari ya idhini",
+      "risk": "Hatari",
+      "claim_loss_date": "Tarehe ya hasara ya dai",
+      "booked_date": "Tarehe ya uhifadhi",
+      "agent_intermediary": "Mwakilishi/Mdhamini",
+      "priority_level": "Kipaumbele",
+      "client": "Mteja",
+      "risk_value": "Thamani ya hatari",
+      "claim_notification_date": "Tarehe ya taarifa ya dai",
+      "admit_liability": "Kukubali dhima",
+      "insured_policy_no": "Nambari ya sera ya bima",
+      "currency": "Fedha"
+    },
+    "claim_transaction_report": {
+      "claim_transaction_report": "Ripoti ya Shughuli za Madai",
+      "claim_revisions": "Marekebisho ya Madai",
+      "claim_payments": "Malipo ya Madai",
+      "letters_and_memos": "Barua na Vidokezo",
+      "policy_enquiry": "Uchunguzi wa Sera",
+      "back_to_claim_enquiry": "Rudi kwa Uchunguzi wa Madai",
+      "trans_type": "Aina ya Shughuli",
+      "trans_date": "Tarehe ya Shughuli",
+      "gross_liability": "Dhima Jumla",
+      "net_liability_payee": "Mpokeaji wa Dhima Halisi",
+      "paid_amount": "Kiasi Kilicholipwa",
+      "authorised_by": "Idhini Imepewa na",
+      "authorise_date": "Tarehe ya Idhini",
+      "cheque_number": "Nambari ya Cheki",
+      "cheque_date": "Tarehe ya Cheki",
+      "receipt_number": "Nambari ya Risiti",
+      "action": "Kitendo"
+    }
+  
   }
-  }
-},
+  },
   "lms": {
     "common": {},
     "ind": {
