--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1140,66 +1140,112 @@
       "exchange_rate": "Exchange rate"
 
     },
-    "claims": {
-      "opening": {
-        "claim_opening": "Claim Opening",
-        "product": "Product",
-        "select_product": "Select Product",
-        "policy": "Policy",
-        "select_policy": "Select Policy",
-        "loss_date": "Loss Date",
-        "select_date": "Select Date",
-        "loss_time": "Loss Time",
-        "select_time": "Select Time",
-        "risk": "Risk",
-        "select_risk": "Select Risk",
-        "notification_date": "Notification Date",
-        "causation": "Causation",
-        "select_causation": "Select Causation",
-        "catastrophe_event": "Catastrophe/Event",
-        "select_catastrophe_event": "Select Catastrophe/Event",
-        "claim_description": "Claim Description",
-        "enter_claim_description": "Enter Claim Description",
-        "party_to_blame": "Party to Blame",
-        "select_party_to_blame": "Select Party to Blame",
-        "average_basic_salary": "Average Basic Salary",
-        "enter_average_basic_salary": "Enter Average Basic Salary",
-        "average_earnings": "Average Earnings",
-        "enter_average_earnings": "Enter Average Earnings",
-        "off_duty_date_from": "Off Duty Date From",
-        "off_duty_date_to": "Off Duty Date To",
-        "liability_admission": "Liability Admission",
-        "next_review_date": "Next Review Date",
-        "next_review_user": "Next Review User",
-        "select_next_review_user": "Select Next Review User",
-        "priority_level": "Priority Level",
-        "select_priority_level": "Select Priority Level",
-        "reference_number": "Reference Number",
-        "enter_reference_number": "Enter Reference Number",
-        "accident_location": "Accident Location",
-        "enter_accident_location": "Enter Accident Location",
-        "add_peril": "Add Peril",
-        "peril": "Peril",
-        "claim_estimate": "Claim Estimate",
-        "actions": "Actions",
-        "edit": "Edit",
-        "delete": "Delete",
-        "capture_claim": "Capture Claim",
-        "insured_as_claimant": "Insured as Claimant",
-        "claimant": "Claimant",
-        "create_claimant": "Create Claimant",        
-        "peril_details": "Peril Details",          
-        "select_peril": "Select Peril",  
-        "enter_claim_estimate": "Enter Claim Estimate",
-        "cancel": "Cancel", 
-        "save": "Save",
-        "edit_peril": "Edit Peril",
-        "confirm_delete_peril": "Are you sure you want to delete this peril?",
-        "enter_peril": "Enter Peril"
-        
+      "claims": {
+        "opening": {
+          "claim_opening": "Claim Opening",
+          "product": "Product",
+          "select_product": "Select Product",
+          "policy": "Policy",
+          "select_policy": "Select Policy",
+          "loss_date": "Loss Date",
+          "select_date": "Select Date",
+          "loss_time": "Loss Time",
+          "select_time": "Select Time",
+          "risk": "Risk",
+          "select_risk": "Select Risk",
+          "notification_date": "Notification Date",
+          "causation": "Causation",
+          "select_causation": "Select Causation",
+          "catastrophe_event": "Catastrophe/Event",
+          "select_catastrophe_event": "Select Catastrophe/Event",
+          "claim_description": "Claim Description",
+          "enter_claim_description": "Enter Claim Description",
+          "party_to_blame": "Party to Blame",
+          "select_party_to_blame": "Select Party to Blame",
+          "average_basic_salary": "Average Basic Salary",
+          "enter_average_basic_salary": "Enter Average Basic Salary",
+          "average_earnings": "Average Earnings",
+          "enter_average_earnings": "Enter Average Earnings",
+          "off_duty_date_from": "Off Duty Date From",
+          "off_duty_date_to": "Off Duty Date To",
+          "liability_admission": "Liability Admission",
+          "next_review_date": "Next Review Date",
+          "next_review_user": "Next Review User",
+          "select_next_review_user": "Select Next Review User",
+          "priority_level": "Priority Level",
+          "select_priority_level": "Select Priority Level",
+          "reference_number": "Reference Number",
+          "enter_reference_number": "Enter Reference Number",
+          "accident_location": "Accident Location",
+          "enter_accident_location": "Enter Accident Location",
+          "add_peril": "Add Peril",
+          "peril": "Peril",
+          "claim_estimate": "Claim Estimate",
+          "actions": "Actions",
+          "edit": "Edit",
+          "delete": "Delete",
+          "capture_claim": "Capture Claim",
+          "insured_as_claimant": "Insured as Claimant",
+          "claimant": "Claimant",
+          "create_claimant": "Create Claimant",        
+          "peril_details": "Peril Details",          
+          "select_peril": "Select Peril",  
+          "enter_claim_estimate": "Enter Claim Estimate",
+          "cancel": "Cancel", 
+          "save": "Save",
+          "edit_peril": "Edit Peril",
+          "confirm_delete_peril": "Are you sure you want to delete this peril?",
+          "enter_peril": "Enter Peril"
+          
+        },
+        "claim_transaction": {
+          "claim_transaction_details": "Claim Transaction Details",
+          "claim_number": "Claim No.",
+          "product": "Product",
+          "risk_wef": "Risk WEF",
+          "loss_description": "Loss Description",
+          "claim_status": "Claim Status",
+          "catastrophe": "Catastrophe",
+          "policy_number": "Policy No.",
+          "insured": "Insured",
+          "risk_wet": "Risk WET",
+          "booked_by": "Booked By",
+          "next_review_date": "Next Review Date",
+          "event": "Event",
+          "endorsement_number": "Endorsement No.",
+          "risk": "Risk",
+          "claim_loss_date": "Claim Loss Date",
+          "booked_date": "Booked Date",
+          "agent_intermediary": "Agent/Intermediary",
+          "priority_level": "Priority Level",
+          "client": "Client",
+          "risk_value": "Risk Value",
+          "claim_notification_date": "Claim Notification Date",
+          "admit_liability": "Admit Liability",
+          "insured_policy_no": "Insured Policy No",
+          "currency": "Currency"
+        },
+        "claim_transaction_report": {
+          "claim_transaction_report": "Claim Transaction Report",
+          "claim_revisions": "Claim Revisions",
+          "claim_payments": "Claim Payments",
+          "letters_and_memos": "Letters and Memos",
+          "policy_enquiry": "Policy Enquiry",
+          "back_to_claim_enquiry": "Back to Claim Enquiry",
+          "trans_type": "Trans Type",
+          "trans_date": "Trans Date",
+          "gross_liability": "Gross Liability",
+          "net_liability_payee": "Net Liability Payee",
+          "paid_amount": "Paid Amount",
+          "authorised_by": "Auth Authorised By",
+          "authorise_date": "Authorise Date",
+          "cheque_number": "Cheque Number",
+          "cheque_date": "Cheque Date",
+          "receipt_number": "Receipt Number",
+          "action": "Action"
+        }
       }
-    }
-  },
+    },
   "lms": {
        "ind": {
         "quotations": {
