--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1168,9 +1168,55 @@
         "edit_peril": "Modifier le péril", 
         "confirm_delete_peril": "Êtes-vous sûr de vouloir supprimer ce péril ?", 
         "enter_peril": "Entrez le péril"
+    },
+    "claim_transaction": {
+      "claim_transaction_details": "Détails de la transaction de réclamation",
+      "claim_number": "Numéro de réclamation",
+      "product": "Produit",
+      "risk_wef": "Risque WEF",
+      "loss_description": "Description de la perte",
+      "claim_status": "Statut de la réclamation",
+      "catastrophe": "Catastrophe",
+      "policy_number": "Numéro de police",
+      "insured": "Assuré",
+      "risk_wet": "Risque WET",
+      "booked_by": "Réservé par",
+      "next_review_date": "Date de la prochaine revue",
+      "event": "Événement",
+      "endorsement_number": "Numéro d'endossement",
+      "risk": "Risque",
+      "claim_loss_date": "Date de la perte de la réclamation",
+      "booked_date": "Date de réservation",
+      "agent_intermediary": "Agent/Intermédiaire",
+      "priority_level": "Niveau de priorité",
+      "client": "Client",
+      "risk_value": "Valeur du risque",
+      "claim_notification_date": "Date de notification de la réclamation",
+      "admit_liability": "Admettre la responsabilité",
+      "insured_policy_no": "Numéro de police assuré",
+      "currency": "Devise"
+    },
+    "claim_transaction_report": {
+      "claim_transaction_report": "Rapport de transaction de réclamation",
+      "claim_revisions": "Révisions de réclamations",
+      "claim_payments": "Paiements de réclamations",
+      "letters_and_memos": "Lettres et mémos",
+      "policy_enquiry": "Enquête sur la police",
+      "back_to_claim_enquiry": "Retour à l'enquête sur la réclamation",
+      "trans_type": "Type de transaction",
+      "trans_date": "Date de la transaction",
+      "gross_liability": "Responsabilité brute",
+      "net_liability_payee": "Bénéficiaire de la responsabilité nette",
+      "paid_amount": "Montant payé",
+      "authorised_by": "Autorisé par",
+      "authorise_date": "Date d'autorisation",
+      "cheque_number": "Numéro de chèque",
+      "cheque_date": "Date du chèque",
+      "receipt_number": "Numéro de reçu",
+      "action": "Action"
+    }
   }
-  }
-},
+  },
   "lms": {
     "common": {},
     "ind": {
