VQ-2784 Update Documents API

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1044,7 +1044,7 @@
       "proceed": "Procéder",
       "select_an_option": "Sélectionner une option",
       "upload_documents": "Télécharger des documents",
-      "yes": "Oui"
+      "yes": "Oui",
     },
     "grp": {
       "member_portal": {
