--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1087,7 +1087,8 @@
       "surrender_type": "Surrender Type",
       "offset_premium": "Offset Premium",
       "within_system": "Within System",
-      "outside_system": "Outside System"
+      "outside_system": "Outside System",
+      "book_claim": "Book Claim"
     },
     "grp": {
       "member_portal": {
