campaigns multilingual and unit tests

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1158,13 +1158,13 @@
         "insured_as_claimant": "被保险人作为索赔人",
         "claimant": "索赔人",
         "create_claimant": "创建索赔人",
-        "peril_details": "风险详情", 
-        "select_peril": "选择风险", 
-        "enter_claim_estimate": "输入索赔估计", 
+        "peril_details": "风险详情",
+        "select_peril": "选择风险",
+        "enter_claim_estimate": "输入索赔估计",
         "cancel": "取消",
         "save": "保存",
-        "edit_peril": "编辑风险", 
-        "confirm_delete_peril": "您确定要删除此风险吗？", 
+        "edit_peril": "编辑风险",
+        "confirm_delete_peril": "您确定要删除此风险吗？",
         "enter_peril": "输入风险"
       },
       "claim_transaction": {
@@ -1711,5 +1711,97 @@
     "signSelect": "签署选择",
     "correction": "发送以更正",
     "reject": "拒绝"
+  },
+  "campaignMngmt": {
+    "campaigns": "活动",
+    "viewAnalytics": "查看分析",
+    "campaignName": "活动名称",
+    "objective": "目标",
+    "description": "描述",
+    "system": "系统",
+    "user": "用户",
+    "group": "组",
+    "organisation": "组织",
+    "startingDate": "开始日期",
+    "closingDate": "结束日期",
+    "expectedCost": "预期成本",
+    "budgetedCost": "预算成本",
+    "actualCost": "实际成本",
+    "expectedRevenue": "预期收入",
+    "currency": "货币",
+    "sponsor": "赞助商",
+    "campaignType": "活动类型",
+    "campaignStatus": "活动状态",
+    "impressions": "展示次数",
+    "event": "事件",
+    "venue": "场地",
+    "eventTime": "活动时间",
+    "products": "产品",
+    "product": "产品",
+    "narration": "叙述",
+    "clients": "客户",
+    "fullName": "全名",
+    "surname": "姓",
+    "otherNames": "其他名字",
+    "town": "城市",
+    "postalCode": "邮政编码",
+    "postalAddress": "邮寄地址",
+    "country": "国家",
+    "telephoneNo": "电话号码",
+    "campaignDefinition": "活动定义",
+    "basicInformation": "基本信息",
+    "name": "名称",
+    "systemType": "系统类型",
+    "from": "从",
+    "to": "到",
+    "executionTime": "执行时间",
+    "assignedTo": "分配给",
+    "organization": "组织",
+    "team": "团队",
+    "sponsorPartner": "赞助商/合作伙伴",
+    "status": "状态",
+    "pageImpressions": "页面印象",
+    "campaignProducts": "活动产品",
+    "campaignDetails": "活动详情",
+    "financialInformation": "财务信息",
+    "assignment": "任务分配",
+    "campaignTargets": "活动目标",
+    "target": "目标",
+    "email": "电子邮件",
+    "date": "日期",
+    "campaignActivities": "活动活动",
+    "subject": "主题",
+    "wef": "WEF",
+    "wet": "WET",
+    "campaignMessages": "活动消息",
+    "body": "正文",
+    "sendToAll": "发送给所有人",
+    "messageStatus": "消息状态",
+    "hasImage": "有图片",
+    "trackerURLS": "跟踪网址",
+    "url": "网址",
+    "action": "操作",
+    "campaignPerformance": "活动表现",
+    "dateRange": "日期范围",
+    "messagesSent": "已发送的消息",
+    "messagesQueue": "消息队列",
+    "viewedMessages": "已查看的消息",
+    "clickThruLink": "点击链接",
+    "optedOut": "已退出",
+    "suppressed": "被屏蔽",
+    "performanceOverTime": "随时间变化的表现",
+    "metric": "指标",
+    "topPerformingProducts": "表现最好的产品",
+    "campaignsAnalytics": "活动分析",
+    "engagementRate": "参与率",
+    "conversionRate": "转化率",
+    "linkClicks": "链接点击",
+    "topPerformingCampaigns": "表现最好的活动",
+    "audienceSegmentationPerformance": "受众细分表现",
+    "campaignProductsPerformance": "活动产品表现",
+    "productName": "产品名称",
+    "engagements": "互动",
+    "total": "总计",
+    "categoryAudience": "类别受众百分比"
   }
 }
