--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1164,7 +1164,7 @@
     "enter_claim_estimate": "Schätzung des Schadens eingeben",
     "cancel": "Abbrechen",
     "save": "Speichern",
-    "edit_peril": "Bewerk Gevaar", 
+    "edit_peril": "Bewerk Gevaar",
     "confirm_delete_peril": "Weet u zeker dat u dit gevaar wilt verwijderen?",
     "enter_peril": "Voer Gevaar in"
   },
@@ -1712,5 +1712,97 @@
     "signSelect": "Auswahl unterschreiben",
     "correction": "Zur Korrektur senden",
     "reject": "Ablehnen"
+  },
+  "campaignMngmt": {
+    "campaigns": "Kampagnen",
+    "viewAnalytics": "Analysen anzeigen",
+    "campaignName": "Kampagnenname",
+    "objective": "Ziel",
+    "description": "Beschreibung",
+    "system": "System",
+    "user": "Benutzer",
+    "group": "Gruppe",
+    "organisation": "Organisation",
+    "startingDate": "Startdatum",
+    "closingDate": "Enddatum",
+    "expectedCost": "Erwartete Kosten",
+    "budgetedCost": "Geplante Kosten",
+    "actualCost": "Tatsächliche Kosten",
+    "expectedRevenue": "Erwarteter Umsatz",
+    "currency": "Währung",
+    "sponsor": "Sponsor",
+    "campaignType": "Kampagnentyp",
+    "campaignStatus": "Kampagnenstatus",
+    "impressions": "Impressionen",
+    "event": "Veranstaltung",
+    "venue": "Veranstaltungsort",
+    "eventTime": "Veranstaltungszeit",
+    "products": "Produkte",
+    "product": "Produkt",
+    "narration": "Erzählung",
+    "clients": "Kunden",
+    "fullName": "Vollständiger Name",
+    "surname": "Nachname",
+    "otherNames": "Weitere Namen",
+    "town": "Stadt",
+    "postalCode": "Postleitzahl",
+    "postalAddress": "Postanschrift",
+    "country": "Land",
+    "telephoneNo": "Telefonnummer",
+    "campaignDefinition": "Kampagnendefinition",
+    "basicInformation": "Grundlegende Informationen",
+    "name": "Name",
+    "systemType": "Systemtyp",
+    "from": "Von",
+    "to": "Bis",
+    "executionTime": "Ausführungszeit",
+    "assignedTo": "Zugewiesen an",
+    "organization": "Organisation",
+    "team": "Team",
+    "sponsorPartner": "Sponsor/Partner",
+    "status": "Status",
+    "pageImpressions": "Seitenimpressionen",
+    "campaignProducts": "Kampagnenprodukte",
+    "campaignDetails": "Kampagnendetails",
+    "financialInformation": "Finanzinformationen",
+    "assignment": "Zuweisung",
+    "campaignTargets": "Kampagnenziele",
+    "target": "Ziel",
+    "email": "E-Mail",
+    "date": "Datum",
+    "campaignActivities": "Kampagnenaktivitäten",
+    "subject": "Betreff",
+    "wef": "WEF",
+    "wet": "WET",
+    "campaignMessages": "Kampagnen-Nachrichten",
+    "body": "Nachrichtentext",
+    "sendToAll": "An alle senden",
+    "messageStatus": "Nachrichtenstatus",
+    "hasImage": "Hat Bild",
+    "trackerURLS": "Tracker-URLs",
+    "url": "URL",
+    "action": "Aktion",
+    "campaignPerformance": "Kampagnenleistung",
+    "dateRange": "Datumsbereich",
+    "messagesSent": "Nachrichten gesendet",
+    "messagesQueue": "Nachrichten-Warteschlange",
+    "viewedMessages": "Gesehene Nachrichten",
+    "clickThruLink": "Klick-Durch-Link",
+    "optedOut": "Abgemeldet",
+    "suppressed": "Unterdrückt",
+    "performanceOverTime": "Leistung über die Zeit",
+    "metric": "Metrik",
+    "topPerformingProducts": "Top-Performing-Produkte",
+    "campaignsAnalytics": "Kampagnenanalysen",
+    "engagementRate": "Engagement-Rate",
+    "conversionRate": "Konversionsrate",
+    "linkClicks": "Link-Klicks",
+    "topPerformingCampaigns": "Top-Kampagnen",
+    "audienceSegmentationPerformance": "Leistung der Zielgruppen-Segmentierung",
+    "campaignProductsPerformance": "Leistung der Kampagnenprodukte",
+    "productName": "Produktname",
+    "engagements": "Interaktionen",
+    "total": "Gesamt",
+    "categoryAudience": "% der Zielgruppe der Kategorie"
   }
 }
