--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1187,11 +1187,11 @@
           "capture_claim": "Capture Claim",
           "insured_as_claimant": "Insured as Claimant",
           "claimant": "Claimant",
-          "create_claimant": "Create Claimant",        
-          "peril_details": "Peril Details",          
-          "select_peril": "Select Peril",  
+          "create_claimant": "Create Claimant",
+          "peril_details": "Peril Details",
+          "select_peril": "Select Peril",
           "enter_claim_estimate": "Enter Claim Estimate",
-          "cancel": "Cancel", 
+          "cancel": "Cancel",
           "save": "Save",
           "edit_peril": "Edit Peril",
           "confirm_delete_peril": "Are you sure you want to delete this peril?",
@@ -2071,6 +2071,99 @@
     "signSelect": "Sign selected",
     "correction": "Send for correction",
     "reject": "Reject"
-   
+
+  },
+  "campaignMngmt": {
+    "campaigns": "Campaigns",
+    "viewAnalytics": "View analytics",
+    "campaignName": "Campaign name",
+    "objective": "Objective",
+    "description": "Description",
+    "system": "System",
+    "user": "User",
+    "group": "Group",
+    "organisation": "Organisation",
+    "startingDate": "Starting date",
+    "closingDate": "Closing date",
+    "expectedCost": "Expected cost",
+    "budgetedCost": "Budgeted cost",
+    "actualCost": "Actual cost",
+    "expectedRevenue": "Expected revenue",
+    "currency": "Currency",
+    "sponsor": "Sponsor",
+    "campaignType": "Campaign type",
+    "campaignStatus": "Campaign status",
+    "impressions": "Impressions",
+    "event": "Event",
+    "venue": "Venue",
+    "eventTime": "Event time",
+    "products": "Products",
+    "product": "Product",
+    "narration": "Narration",
+    "clients": "Clients",
+    "fullName":  "Full name",
+    "surname": "Surname",
+    "otherNames":  "Other names",
+    "town": "Town",
+    "postalCode":  "Postal code",
+    "postalAddress": "Postal address",
+    "country":  "Country",
+    "telephoneNo": "Telephone no",
+    "campaignDefinition": "Campaign definition",
+    "basicInformation": "Basic information",
+    "name": "Name",
+    "systemType": "System type",
+    "from":  "From",
+    "to": "To",
+    "executionTime": "Execution time",
+    "assignedTo": "Assigned to",
+    "organization": "Organization",
+    "team": "Team",
+    "sponsorPartner": "Sponsor/partner",
+    "status": "Status",
+    "pageImpressions": "Page impressions",
+    "campaignProducts": "Campaign products",
+    "campaignDetails": "Campaign details",
+    "financialInformation": "Financial Information",
+    "assignment": "Assignment",
+    "campaignTargets": "Campaign targets",
+    "target": "Target",
+    "email": "Email",
+    "date": "Date",
+    "campaignActivities": "Campaign activities",
+    "subject": "Subject",
+    "wef": "WEF",
+    "wet": "WET",
+    "campaignMessages": "Campaign messages",
+    "body": "Body",
+    "sendToAll": "Send to all",
+    "messageStatus": "Message status",
+    "hasImage": "Has image",
+    "trackerURLS": "Tracker URLS",
+    "url": "URL",
+    "action": "Action",
+    "campaignPerformance": "Campaign performance",
+    "dateRange": "Date range",
+    "messagesSent": "Messages sent",
+    "messagesQueue": "Messages queue",
+    "viewedMessages": "Viewed messages",
+    "clickThruLink": "Click-thru link",
+    "optedOut": "Opted out",
+    "suppressed": "Suppressed",
+    "performanceOverTime": "Performance over time",
+    "metric": "Metric",
+    "topPerformingProducts": "Top performing products",
+    "campaignsAnalytics": "Campaigns analytics",
+    "engagementRate": "Engagement rate",
+    "conversionRate": "Conversion rate",
+    "linkClicks": "Link clicks",
+    "topPerformingCampaigns": "Top performing campaigns",
+    "audienceSegmentationPerformance": "Audience segmentation performance",
+    "campaignProductsPerformance": "Campaign products performance",
+    "productName": "Product name",
+    "engagements": "Engagements",
+    "total": "Total",
+    "categoryAudience": "% of category audience"
+
   }
 }
