--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1158,9 +1158,9 @@
         "insured_as_claimant": "Asegurado como Reclamante",
         "claimant": "Reclamante",
         "create_claimant": "Crear Reclamante",
-        "peril_details": "Detalles del Riesgo", 
+        "peril_details": "Detalles del Riesgo",
         "select_peril": "Seleccionar Riesgo",
-        "enter_claim_estimate": "Ingrese Estimación de Reclamación", 
+        "enter_claim_estimate": "Ingrese Estimación de Reclamación",
         "cancel": "Cancelar",
         "save": "Guardar",
         "edit_peril": "Editar Riesgo", 
@@ -2030,5 +2030,97 @@
     "signSelect": "Firmar selección",
     "correction": "Enviar para corrección",
     "reject": "Rechazar"
+  },
+  "campaignMngmt": {
+    "campaigns": "Campañas",
+    "viewAnalytics": "Ver análisis",
+    "campaignName": "Nombre de la campaña",
+    "objective": "Objetivo",
+    "description": "Descripción",
+    "system": "Sistema",
+    "user": "Usuario",
+    "group": "Grupo",
+    "organisation": "Organización",
+    "startingDate": "Fecha de inicio",
+    "closingDate": "Fecha de cierre",
+    "expectedCost": "Costo esperado",
+    "budgetedCost": "Costo presupuestado",
+    "actualCost": "Costo real",
+    "expectedRevenue": "Ingresos esperados",
+    "currency": "Moneda",
+    "sponsor": "Patrocinador",
+    "campaignType": "Tipo de campaña",
+    "campaignStatus": "Estado de la campaña",
+    "impressions": "Impresiones",
+    "event": "Evento",
+    "venue": "Lugar",
+    "eventTime": "Hora del evento",
+    "products": "Productos",
+    "product": "Producto",
+    "narration": "Narración",
+    "clients": "Clientes",
+    "fullName": "Nombre completo",
+    "surname": "Apellido",
+    "otherNames": "Otros nombres",
+    "town": "Ciudad",
+    "postalCode": "Código postal",
+    "postalAddress": "Dirección postal",
+    "country": "País",
+    "telephoneNo": "Número de teléfono",
+    "campaignDefinition": "Definición de campaña",
+    "basicInformation": "Información básica",
+    "name": "Nombre",
+    "systemType": "Tipo de sistema",
+    "from": "De",
+    "to": "Hasta",
+    "executionTime": "Tiempo de ejecución",
+    "assignedTo": "Asignado a",
+    "organization": "Organización",
+    "team": "Equipo",
+    "sponsorPartner": "Patrocinador/Socio",
+    "status": "Estado",
+    "pageImpressions": "Impresiones de página",
+    "campaignProducts": "Productos de la campaña",
+    "campaignDetails": "Detalles de la campaña",
+    "financialInformation": "Información financiera",
+    "assignment": "Asignación",
+    "campaignTargets": "Objetivos de la campaña",
+    "target": "Objetivo",
+    "email": "Correo electrónico",
+    "date": "Fecha",
+    "campaignActivities": "Actividades de la campaña",
+    "subject": "Asunto",
+    "wef": "WEF",
+    "wet": "WET",
+    "campaignMessages": "Mensajes de la campaña",
+    "body": "Cuerpo",
+    "sendToAll": "Enviar a todos",
+    "messageStatus": "Estado del mensaje",
+    "hasImage": "Tiene imagen",
+    "trackerURLS": "URLs de seguimiento",
+    "url": "URL",
+    "action": "Acción",
+    "campaignPerformance": "Rendimiento de la campaña",
+    "dateRange": "Rango de fechas",
+    "messagesSent": "Mensajes enviados",
+    "messagesQueue": "Cola de mensajes",
+    "viewedMessages": "Mensajes vistos",
+    "clickThruLink": "Enlace de clic",
+    "optedOut": "Optado por no participar",
+    "suppressed": "Suprimido",
+    "performanceOverTime": "Rendimiento a lo largo del tiempo",
+    "metric": "Métrica",
+    "topPerformingProducts": "Productos más vendidos",
+    "campaignsAnalytics": "Analíticas de campañas",
+    "engagementRate": "Tasa de participación",
+    "conversionRate": "Tasa de conversión",
+    "linkClicks": "Clics en el enlace",
+    "topPerformingCampaigns": "Campañas de mejor rendimiento",
+    "audienceSegmentationPerformance": "Rendimiento de la segmentación de audiencia",
+    "campaignProductsPerformance": "Rendimiento de los productos de la campaña",
+    "productName": "Nombre del producto",
+    "engagements": "Interacciones",
+    "total": "Total",
+    "categoryAudience": "% de la audiencia de la categoría"
   }
 }
