--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1160,13 +1160,13 @@
       "insured_as_claimant": "Assuré en tant que réclamant",
       "claimant": "Réclamant",
       "create_claimant": "Créer un réclamant",
-      "peril_details": "Détails du péril", 
-        "select_peril": "Sélectionner un péril", 
-        "enter_claim_estimate": "Entrez l'estimation de la réclamation", 
+      "peril_details": "Détails du péril",
+        "select_peril": "Sélectionner un péril",
+        "enter_claim_estimate": "Entrez l'estimation de la réclamation",
         "cancel": "Annuler",
         "save": "Enregistrer",
-        "edit_peril": "Modifier le péril", 
-        "confirm_delete_peril": "Êtes-vous sûr de vouloir supprimer ce péril ?", 
+        "edit_peril": "Modifier le péril",
+        "confirm_delete_peril": "Êtes-vous sûr de vouloir supprimer ce péril ?",
         "enter_peril": "Entrez le péril"
     },
     "claim_transaction": {
@@ -2032,5 +2032,97 @@
     "signSelect": "Signer la sélection",
     "correction": "Envoyer pour correction",
     "reject": "Rejeter"
+  },
+  "campaignMngmt": {
+    "campaigns": "Campagnes",
+    "viewAnalytics": "Voir les analyses",
+    "campaignName": "Nom de la campagne",
+    "objective": "Objectif",
+    "description": "Description",
+    "system": "Système",
+    "user": "Utilisateur",
+    "group": "Groupe",
+    "organisation": "Organisation",
+    "startingDate": "Date de début",
+    "closingDate": "Date de clôture",
+    "expectedCost": "Coût prévu",
+    "budgetedCost": "Coût budgétisé",
+    "actualCost": "Coût réel",
+    "expectedRevenue": "Revenu prévu",
+    "currency": "Monnaie",
+    "sponsor": "Sponsor",
+    "campaignType": "Type de campagne",
+    "campaignStatus": "Statut de la campagne",
+    "impressions": "Impressions",
+    "event": "Événement",
+    "venue": "Lieu",
+    "eventTime": "Heure de l'événement",
+    "products": "Produits",
+    "product": "Produit",
+    "narration": "Narration",
+    "clients": "Clients",
+    "fullName": "Nom complet",
+    "surname": "Nom de famille",
+    "otherNames": "Autres prénoms",
+    "town": "Ville",
+    "postalCode": "Code postal",
+    "postalAddress": "Adresse postale",
+    "country": "Pays",
+    "telephoneNo": "Numéro de téléphone",
+    "campaignDefinition": "Définition de la campagne",
+    "basicInformation": "Informations de base",
+    "name": "Nom",
+    "systemType": "Type de système",
+    "from": "De",
+    "to": "À",
+    "executionTime": "Temps d'exécution",
+    "assignedTo": "Attribué à",
+    "organization": "Organisation",
+    "team": "Équipe",
+    "sponsorPartner": "Sponsor/Partenaire",
+    "status": "Statut",
+    "pageImpressions": "Impressions de page",
+    "campaignProducts": "Produits de la campagne",
+    "campaignDetails": "Détails de la campagne",
+    "financialInformation": "Informations financières",
+    "assignment": "Affectation",
+    "campaignTargets": "Cibles de la campagne",
+    "target": "Cible",
+    "email": "E-mail",
+    "date": "Date",
+    "campaignActivities": "Activités de campagne",
+    "subject": "Objet",
+    "wef": "WEF",
+    "wet": "WET",
+    "campaignMessages": "Messages de la campagne",
+    "body": "Corps",
+    "sendToAll": "Envoyer à tous",
+    "messageStatus": "Statut du message",
+    "hasImage": "A une image",
+    "trackerURLS": "URLs de suivi",
+    "url": "URL",
+    "action": "Action",
+    "campaignPerformance": "Performance de la campagne",
+    "dateRange": "Plage de dates",
+    "messagesSent": "Messages envoyés",
+    "messagesQueue": "File d'attente des messages",
+    "viewedMessages": "Messages vus",
+    "clickThruLink": "Lien de clic",
+    "optedOut": "S'est désinscrit",
+    "suppressed": "Supprimé",
+    "performanceOverTime": "Performance au fil du temps",
+    "metric": "Métrique",
+    "topPerformingProducts": "Produits les plus performants",
+    "campaignsAnalytics": "Analyses des campagnes",
+    "engagementRate": "Taux d'engagement",
+    "conversionRate": "Taux de conversion",
+    "linkClicks": "Clics sur le lien",
+    "topPerformingCampaigns": "Campagnes les plus performantes",
+    "audienceSegmentationPerformance": "Performance de la segmentation de l'audience",
+    "campaignProductsPerformance": "Performance des produits de la campagne",
+    "productName": "Nom du produit",
+    "engagements": "Engagements",
+    "total": "Total",
+    "categoryAudience": "% de l'audience de la catégorie"
   }
 }
