--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -1162,7 +1162,7 @@
       "create_claimant": "Unda Mdai",
       "peril_details": "Maelezo ya Hatari",
       "select_peril": "Chagua Hatari",
-      "enter_claim_estimate": "Ingiza Kadirio la Dai", 
+      "enter_claim_estimate": "Ingiza Kadirio la Dai",
       "cancel": "Ghairi",
       "save": "Hifadhi",
       "edit_peril": "Hariri Hatari",
@@ -1714,5 +1714,97 @@
     "signSelect": "Chagua sahihi",
     "correction": "Tuma kwa marekebisho",
     "reject": "Kataa"
+  },
+  "campaignMngmt": {
+    "campaigns": "Kampeni",
+    "viewAnalytics": "Angalia uchambuzi",
+    "campaignName": "Jina la kampeni",
+    "objective": "Lengo",
+    "description": "Maelezo",
+    "system": "Mfumo",
+    "user": "Mtumiaji",
+    "group": "Kundi",
+    "organisation": "Shirika",
+    "startingDate": "Tarehe ya kuanza",
+    "closingDate": "Tarehe ya kufunga",
+    "expectedCost": "Gharama inayotarajiwa",
+    "budgetedCost": "Gharama iliyopangwa",
+    "actualCost": "Gharama halisi",
+    "expectedRevenue": "Mapato yanayotarajiwa",
+    "currency": "Sarafu",
+    "sponsor": "Mdhamini",
+    "campaignType": "Aina ya kampeni",
+    "campaignStatus": "Hali ya kampeni",
+    "impressions": "Hisia",
+    "event": "Tukio",
+    "venue": "Ukumbi",
+    "eventTime": "Wakati wa tukio",
+    "products": "Bidhaa",
+    "product": "Bidhaa",
+    "narration": "Maelezo",
+    "clients": "Wateja",
+    "fullName": "Jina kamili",
+    "surname": "Jina la ukoo",
+    "otherNames": "Majina mengine",
+    "town": "Mji",
+    "postalCode": "Nambari ya posta",
+    "postalAddress": "Anwani ya posta",
+    "country": "Nchi",
+    "telephoneNo": "Nambari ya simu",
+    "campaignDefinition": "Ufafanuzi wa kampeni",
+    "basicInformation": "Taarifa za msingi",
+    "name": "Jina",
+    "systemType": "Aina ya mfumo",
+    "from": "Kutoka",
+    "to": "Hadi",
+    "executionTime": "Muda wa utekelezaji",
+    "assignedTo": "Imekabidhiwa kwa",
+    "organization": "Shirika",
+    "team": "Timu",
+    "sponsorPartner": "Mdhamini/Mshirika",
+    "status": "Hali",
+    "pageImpressions": "Impressioni za ukurasa",
+    "campaignProducts": "Bidhaa za kampeni",
+    "campaignDetails": "Maelezo ya kampeni",
+    "financialInformation": "Taarifa za kifedha",
+    "assignment": "Kazi iliyokabidhiwa",
+    "campaignTargets": "Malengo ya kampeni",
+    "target": "Lengo",
+    "email": "Barua pepe",
+    "date": "Tarehe",
+    "campaignActivities": "Shughuli za kampeni",
+    "subject": "Mada",
+    "wef": "WEF",
+    "wet": "WET",
+    "campaignMessages": "Ujumbe wa kampeni",
+    "body": "Mwili",
+    "sendToAll": "Tuma kwa wote",
+    "messageStatus": "Hali ya ujumbe",
+    "hasImage": "Ina picha",
+    "trackerURLS": "Viungo vya kufuatilia",
+    "url": "URL",
+    "action": "Hatua",
+    "campaignPerformance": "Utendaji wa kampeni",
+    "dateRange": "Muda wa tarehe",
+    "messagesSent": "Jumbe zilizotumwa",
+    "messagesQueue": "Foleni ya ujumbe",
+    "viewedMessages": "Jumbe zilizotazamwa",
+    "clickThruLink": "Kiungo cha kubofya",
+    "optedOut": "Umetoka",
+    "suppressed": "Imeondolewa",
+    "performanceOverTime": "Utendaji kwa muda",
+    "metric": "Kipimo",
+    "topPerformingProducts": "Bidhaa zinazofanya vizuri",
+    "campaignsAnalytics": "Takwimu za kampeni",
+    "engagementRate": "Kiwango cha ushiriki",
+    "conversionRate": "Kiwango cha uongofu",
+    "linkClicks": "Mibonyezo ya kiungo",
+    "topPerformingCampaigns": "Kampeni bora zaidi",
+    "audienceSegmentationPerformance": "Utendaji wa kugawanya hadhira",
+    "campaignProductsPerformance": "Utendaji wa bidhaa za kampeni",
+    "productName": "Jina la bidhaa",
+    "engagements": "Ushirikiano",
+    "total": "Jumla",
+    "categoryAudience": "% ya hadhira ya kitengo"
   }
 }
